--- a/androidApp/src/main/res/navigation/main_graph.xml
+++ b/androidApp/src/main/res/navigation/main_graph.xml
@@ -11,6 +11,18 @@
         <action
             android:id="@+id/createDebtAction"
             app:destination="@id/debtActionFragment" />
+        <action
+            android:id="@+id/startWelcomeSlideshow"
+            app:destination="@id/welcomeFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/welcomeFragment"
+        android:name="com.grup.android.welcome.WelcomeFragment"
+        android:label="WelcomeFragment" >
+        <action
+            android:id="@+id/endWelcomeSlideshow"
+            app:destination="@id/mainFragment" />
     </fragment>
 
     <fragment
